night mode completed - flickering bug present when refreshing page

--- a/popup.css
+++ b/popup.css
@@ -14,12 +14,9 @@ button{
 	padding: 2px 3px;
 }
 
-
-
-
 tr td:first-child, tr th:first-child {
 	background-color: #fff;
-	width: 60px;
+	width: 30px;
 	display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +25,7 @@ tr td:first-child, tr th:first-child {
 
 tr td:last-child, tr th:last-child{
 	background-color: #fff;
-	width: 60px;
+	width: 30px;
 	display: flex;
     justify-content: center;
     align-items: center;
